--- a/index.html
+++ b/index.html
@@ -182,11 +182,13 @@
         .about-img-container {
             display: flex;
             flex-direction: column;
+            align-items: center;
             gap: 8px;
         }
 
         .img-caption {
             font-size: 0.85rem;
+            text-align: center;
             color: #666;
             font-style: italic;
             text-align: center;
@@ -800,6 +802,7 @@
             <h2>Contact</h2>
             <p>
                 📧 <a href="mailto:malek.kchaou@ku.edu">malek.kchaou@ku.edu</a><br />
+                <small style="color: #666; margin-left: 24px;">(Click to send email, or copy: malek.kchaou@ku.edu)</small><br />
                 🔗 <a href="https://www.linkedin.com/in/malekkchaou/">LinkedIn</a><br />
                 💻 <a href="https://github.com/MK720-dev">GitHub</a>
             </p>
