--- a/index.html
+++ b/index.html
@@ -768,8 +768,6 @@
             </div>
         </section>
 
-
-
         <!-- -------------------- PERSONAL CREATIVE PROJECTS -------------------- -->
         <section class="section">
             <h2>Personal Creative Projects</h2>
@@ -777,8 +775,11 @@
 
                 <div class="project-card">
                     <h3>The Malek Kchaou Experience Podcast</h3>
-                    <p><strong>Oct 2022 – Oct 2023</strong></p>
-                    <p>A personal podcast inspired by long-form conversation formats.</p>
+                    <h4>Featured Episodes:</h4>
+                    <ul>
+                        <li><a href="https://www.youtube.com/watch?v=izAuNfHRkP4">Episode 1</a></li>
+                        <li><a href="https://youtu.be/YX8L38GEWRw?si=R-BEWn2HW1xNIE--">Episode 2</a></li>
+                    </ul>
                 </div>
 
             </div>
