changed some content

--- a/index.html
+++ b/index.html
@@ -221,12 +221,10 @@
                 <div class="about-text">
                     <h3>Where I'm From</h3>
                     <p>
-                        I was born and raised in the Mediterranean, in Tunisia—a country shaped by ancient
-                        civilizations, scientific heritage, and a deep cultural respect for learning. Academics
-                        were always central in my life. After ranking among the top students nationally in both
-                        the elementary and middle school national exams, I earned admission into two of the most
-                        selective public institutions in the country: the <strong>Collège Pilote les Berges du Lac 2</strong>
-                        and the <strong>Pioneer School of Ariana (LPA)</strong>, where I completed the mathematics section.
+                        I was born and raised on the Mediterranean coast of Tunisia—a country shaped by ancient civilizations, scientific heritage, and a deep cultural respect for learning. 
+                        Academics were central in my life from an early age. After ranking among the top students nationally in both the elementary and middle school national exams, I earned 
+                        admission into two of the most selective public institutions in the country: the Collège Pilote les Berges du Lac 2 and the Pioneer School of Ariana (LPA), where I completed the mathematics track. 
+                        These formative years instilled in me a strong analytical foundation, intellectual curiosity, and a commitment to excellence.
                     </p>
                 </div>
                 <div class="about-img-container">
@@ -240,10 +238,9 @@
                 <div class="about-text">
                     <h3>Sports & Personal Interests</h3>
                     <p>
-                        Athletics have always played a central role in my life, especially <strong>judo</strong>.
-                        Training taught me discipline, resilience, and the importance of technical precision—
-                        qualities that translate directly into my work in machine learning and computational
-                        modeling. I'm also deeply interested in <strong>ancient history</strong>, particularly Carthage.
+                        Athletics have always played a central role in my life, especially judo—a martial art I have practiced since I was seven years old. 
+                        Training instilled in me discipline, resilience, and an appreciation for technical precision—qualities that directly influence my personal life, 
+                        academic journey, and my work in machine learning and computational modeling. I am also deeply interested in ancient history, particularly the legacy of Carthage.
                     </p>
                 </div>
                 <div class="about-img-container">
