changed some content

--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
                         </p>
 
                         <p>
-                            Overall, my <strong>research agenda</strong> focuses on the mathematical and algorithmic foundations of
+                            As such, my <strong>research agenda</strong> focuses on the mathematical and algorithmic foundations of
                             machine learning, with emphasis on the following themes:
 
                             <ul>
