change of content

--- a/index.html
+++ b/index.html
@@ -697,7 +697,7 @@
                 <!-- ---- Sports Performance Assistant ---- -->
                 <div class="scroll-card">
                     <h3>Sports Performance Data Collection Assistant</h3>
-                    <p><strong>Pittsburg State University Women’s Soccer Team</strong> — August 2025</p>
+                    <p><strong>Jayhawk Athletic Performance Lab</strong> — August 2025</p>
 
                     <div class="tags">
                         <span class="tag">Applied Biomechanics</span>
@@ -713,7 +713,7 @@
                             <a href="https://hses.ku.edu/people/minh-nguyen">Minh Nguyen</a>,
                             a KU PhD student in Exercise Physiology and research scientist in the
                             <strong>Jayhawk Athletic Performance Laboratory (KU)</strong>,
-                            to support pre-season performance testing for a collegiate women’s soccer program.
+                            to support pre-season performance testing for Pittsburg State University Women’s Soccer Team.
                         </li>
 
                         <li>
