change of content

--- a/index.html
+++ b/index.html
@@ -754,7 +754,7 @@
                     </div>
 
                     <ul class="card-list">
-                        <li>Taught judo under Sensai Abderrazak Turki, former manager of the Tunisian Judo National Team.</li>
+                        <li>Taught judo under Sensei Abderrazak Turki, former manager of the Tunisian Judo National Team.</li>
                         <li>Mentored children and young athletes, adapting explanations to their learning styles and abilities.</li>
                         <li>Broke down complex movement patterns into accessible steps, strengthening my communication skills.</li>
                         <li>Coached weekly judo classes at the Lawrence Fight Club (LFC), guiding students through skill progression.</li>
