--- a/index.html
+++ b/index.html
@@ -569,7 +569,7 @@
                 <div class="project-card">
                     <h3>Dr. Suzanne M. Shontz</h3>
                     <p>
-                        Professor of Computer Science at KU. Research in numerical optimization,
+                        Associate Dean for Graduate and Online Education and Professor of Electrical Engineering and Computer Science at KU. Research in numerical optimization,
                         computational science, mesh generation, and biomedical modeling.
                     </p>
                     <p>🌐 <a href="https://people.eecs.ku.edu/~s906s230/">Faculty Website</a></p>
