--- a/index.html
+++ b/index.html
@@ -195,6 +195,40 @@
             margin: 0;
         }
 
+        .video-banner {
+            position: relative;
+            margin: 50px 0;
+            border-radius: 14px;
+            overflow: hidden;
+        }
+
+        .banner-video {
+            width: 100%;
+            height: auto;
+            display: block;
+            filter: brightness(0.7);
+        }
+
+        .banner-text {
+            position: absolute;
+            bottom: 20px;
+            left: 30px;
+            color: white;
+        }
+
+            .banner-text h2 {
+                margin: 0;
+                font-size: 1.9rem;
+                font-weight: 700;
+            }
+
+            .banner-text p {
+                margin: 6px 0 0;
+                font-size: 1.15rem;
+                opacity: 0.9;
+            }
+
+
     </style>
 </head>
 
@@ -296,6 +330,17 @@
             <h2>Recent Featured Projects</h2>
 
             <div class="projects-grid">
+
+                <section class="section video-banner">
+                    <video autoplay muted loop class="banner-video">
+                        <source src="assets/cardio_demo.mp4" type="video/mp4">
+                    </video>
+
+                    <div class="banner-text">
+                        <h2>CardioSegNet — Fast and Lightweight MRI Segmentation</h2>
+                        <p>A U-Net–based approach optimized for cardiac MRI slice analysis.</p>
+                    </div>
+                </section>
 
                 <div class="project-card">
                     <h3><a href="https://github.com/MK720-dev/CardioSegNet">CardioSegNet</a></h3>
