changed path to cardiosegnet demo

--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
 
                 <section class="section video-banner">
                     <video autoplay muted loop class="banner-video">
-                        <source src="assets/cardio_demo.mp4" type="video/mp4">
+                        <source src="assets/CardioSegNet1.0_demo.mp4" type="video/mp4">
                     </video>
 
                     <div class="banner-text">
