Changed layout for highlight video banners

--- a/index.html
+++ b/index.html
@@ -324,23 +324,37 @@
                 </div>
             </div>
         </section>
+        <section class="section">
+            <h2>Research Highlights</h2>
 
+            <!-- -------- CardioSegNet Banner -------- -->
+            <section class="video-banner">
+                <video autoplay muted loop class="banner-video">
+                    <source src="assets/CardioSegNet1.0_demo.mp4" type="video/mp4">
+                </video>
+                <div class="banner-text">
+                    <h2>CardioSegNet Phase 1 — Lightweight MRI Segmentation</h2>
+                    <p>A U-Net–based system for cardiac MRI slice segmentation, developed through iterative research in optimization and biomedical modeling.</p>
+                </div>
+            </section>
+
+            <!-- -------- OptimizerArena Banner 1 -------- -->
+            <section class="video-banner">
+                <video autoplay muted loop class="banner-video">
+                    <source src="assets/OptimizerArenaDemo1.mp4" type="video/mp4">
+                </video>
+                <div class="banner-text">
+                    <h2>OptimizerArena — Loss Landscape Explorer</h2>
+                    <p>A platform for exploring high-dimensional neural loss landscapes using PCA-based surface reconstruction.</p>
+                </div>
+            </section>
+
+        </section>
         <!-- -------------------- RECENT PROJECTS -------------------- -->
         <section class="section">
             <h2>Recent Featured Projects</h2>
 
             <div class="projects-grid">
-
-                <section class="section video-banner">
-                    <video autoplay muted loop class="banner-video">
-                        <source src="assets/CardioSegNet1.0_demo.mp4" type="video/mp4">
-                    </video>
-
-                    <div class="banner-text">
-                        <h2>CardioSegNet — Fast and Lightweight MRI Segmentation</h2>
-                        <p>A U-Net–based approach optimized for cardiac MRI slice analysis.</p>
-                    </div>
-                </section>
 
                 <div class="project-card">
                     <h3><a href="https://github.com/MK720-dev/CardioSegNet">CardioSegNet</a></h3>
