--- a/index.html
+++ b/index.html
@@ -235,54 +235,60 @@
             border-radius: 16px;
             overflow: hidden;
             box-shadow: 0 4px 20px rgba(0,0,0,0.08);
-            margin-bottom: 30px;
+            /* 🟦 NEW FIX: limit the carousel width */
+            max-width: 1000px;
+            margin: 0 auto 40px auto;
         }
 
         .carousel-container {
             display: flex;
             transition: transform 0.5s ease-in-out;
+            width: 100%;
         }
 
         .carousel-slide {
             min-width: 100%;
             flex-shrink: 0;
-            padding: 60px;
+            /* 🟦 NEW FIX: reduce padding so slides aren’t huge */
+            padding: 30px;
             display: flex;
-            gap: 60px;
-            align-items: center;
+            gap: 30px;
+            align-items: flex-start;
+            /* Prevent slides from stretching full height */
+            box-sizing: border-box;
         }
 
         .video-container {
             flex: 1;
-            background: #000;
             border-radius: 12px;
             overflow: hidden;
-            aspect-ratio: 16/9;
-            position: relative;
+            /* 🟦 NEW FIX: lock video height */
+            max-height: 280px;
         }
 
             .video-container video {
                 width: 100%;
                 height: 100%;
-                object-fit: cover;
+                object-fit: contain; /* was cover – this avoids cropping & overflow */
             }
 
+        /* Text section stays readable */
         .project-info {
             flex: 1;
+            max-width: 400px;
         }
 
         .project-title {
-            font-size: 2.5rem;
-            color: #0366d6;
-            margin-bottom: 20px;
+            font-size: 1.8rem;
+            margin-bottom: 15px;
         }
 
         .project-description {
-            font-size: 1.15rem;
-            line-height: 1.8;
-            color: #4b5563;
-            margin-bottom: 30px;
+            font-size: 1rem;
+            line-height: 1.6;
+            margin-bottom: 20px;
         }
+
 
         .project-details {
             display: flex;
