--- a/index.html
+++ b/index.html
@@ -262,15 +262,18 @@
             flex: 1;
             border-radius: 12px;
             overflow: hidden;
-            /* 🟦 NEW FIX: lock video height */
-            max-height: 280px;
+            max-height: 220px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
         }
 
             .video-container video {
                 width: 100%;
                 height: 100%;
-                object-fit: contain; /* was cover – this avoids cropping & overflow */
+                object-fit: contain; 
             }
+
 
         /* Text section stays readable */
         .project-info {
