--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
                 width: auto;
                 height: 200%; /* ⭐ zoom the video so it crops nicely */
                 transform: translate(-50%, -50%);
-                object-fit: cover; /* ⭐ mandatory for cropping effect */
+                object-fit: contain; /* ⭐ mandatory for cropping effect */
             }
 
 
