--- a/index.html
+++ b/index.html
@@ -235,8 +235,7 @@
             border-radius: 16px;
             overflow: hidden;
             box-shadow: 0 4px 20px rgba(0,0,0,0.08);
-            /* 🟦 NEW FIX: limit the carousel width */
-            max-width: 1000px;
+            max-width: 1300px;
             margin: 0 auto 40px auto;
         }
 
@@ -249,31 +248,27 @@
         .carousel-slide {
             min-width: 100%;
             flex-shrink: 0;
-            /* 🟦 NEW FIX: reduce padding so slides aren’t huge */
-            padding: 30px;
+            padding: 20px 30px;
             display: flex;
-            gap: 30px;
+            gap: 24px;
             align-items: flex-start;
-            /* Prevent slides from stretching full height */
             box-sizing: border-box;
         }
 
         .video-container {
-            flex: 0 0 300px; /* fixed width for video window */
-            height: 180px; /* fixed height for video window */
+            flex: none; /* fixed width for video window */
+            height: 200px; /* fixed height for video window */
+            width: 320px;
             border-radius: 12px;
             position: relative;
             background: black;
+            overflow: hidden;
         }
 
             .video-container video {
-                position: absolute;
-                top: 50%;
-                left: 50%;
-                width: auto;
-                height: 200%; /* ⭐ zoom the video so it crops nicely */
-                transform: translate(-50%, -50%);
-                object-fit: contain; /* ⭐ mandatory for cropping effect */
+                width: 100%;
+                height: 100%; /* ⭐ zoom the video so it crops nicely */
+                object-fit: cover; /* ⭐ mandatory for cropping effect */
             }
 
 
