--- a/index.html
+++ b/index.html
@@ -248,45 +248,44 @@
         .carousel-slide {
             min-width: 100%;
             flex-shrink: 0;
-            padding: 20px 30px;
+            padding: 30px 40px;
             display: flex;
-            gap: 24px;
             align-items: flex-start;
+            justify-content: space-between;
+            gap: 40px;
             box-sizing: border-box;
         }
 
+        /* LEFT SIDE: VIDEO */
         .video-container {
-            flex: none; /* fixed width for video window */
-            height: 200px; /* fixed height for video window */
-            width: 320px;
+            flex: 1;
+            max-width: 50%;
+            height: 260px;
             border-radius: 12px;
-            position: relative;
-            background: black;
             overflow: hidden;
+            background: black;
         }
 
             .video-container video {
                 width: 100%;
-                height: 100%; /* ⭐ zoom the video so it crops nicely */
-                object-fit: cover; /* ⭐ mandatory for cropping effect */
+                height: 100%;
+                object-fit: cover;
             }
 
-
-        /* Text section stays readable */
+        /* RIGHT SIDE: TEXT */
         .project-info {
             flex: 1;
-            max-width: 400px;
+            max-width: 50%;
         }
 
         .project-title {
-            font-size: 1.8rem;
-            margin-bottom: 15px;
+            font-size: 2rem;
+            margin-bottom: 10px;
         }
 
         .project-description {
-            font-size: 1rem;
+            font-size: 1.1rem;
             line-height: 1.6;
-            margin-bottom: 20px;
         }
 
 
