--- a/index.html
+++ b/index.html
@@ -248,44 +248,45 @@
         .carousel-slide {
             min-width: 100%;
             flex-shrink: 0;
-            padding: 30px 40px;
+            padding: 20px 30px;
             display: flex;
+            gap: 24px;
             align-items: flex-start;
-            justify-content: space-between;
-            gap: 40px;
             box-sizing: border-box;
         }
 
-        /* LEFT SIDE: VIDEO */
         .video-container {
-            flex: 1;
-            max-width: 50%;
-            height: 260px;
+            flex: none; /* fixed width for video window */
+            height: 200px; /* fixed height for video window */
+            width: 320px;
             border-radius: 12px;
-            overflow: hidden;
+            position: relative;
             background: black;
+            overflow: hidden;
         }
 
             .video-container video {
                 width: 100%;
-                height: 100%;
-                object-fit: cover;
+                height: 100%; /* ⭐ zoom the video so it crops nicely */
+                object-fit: cover; /* ⭐ mandatory for cropping effect */
             }
 
-        /* RIGHT SIDE: TEXT */
+
+        /* Text section stays readable */
         .project-info {
             flex: 1;
-            max-width: 50%;
+            max-width: 400px;
         }
 
         .project-title {
-            font-size: 2rem;
-            margin-bottom: 10px;
+            font-size: 1.8rem;
+            margin-bottom: 15px;
         }
 
         .project-description {
-            font-size: 1.1rem;
+            font-size: 1rem;
             line-height: 1.6;
+            margin-bottom: 20px;
         }
 
 
