--- a/index.html
+++ b/index.html
@@ -248,10 +248,11 @@
         .carousel-slide {
             min-width: 100%;
             flex-shrink: 0;
-            padding: 20px 30px;
+            padding: 60px;
             display: flex;
-            gap: 24px;
-            align-items: flex-start;
+            gap: 60px;
+            align-items: center;
+            justify-content: center;
             box-sizing: border-box;
         }
 
