--- a/index.html
+++ b/index.html
@@ -442,17 +442,19 @@
 
         .carousel-controls {
             position: absolute;
-            bottom: 30px;
-            left: 50%;
-            transform: translateX(-50%);
+            top: 50%;
+            left: 0;
+            width: 100%;
             display: flex;
-            gap: 15px;
-            z-index: 10;
+            justify-content: space-between;
+            transform: translateY(-50%);
+            padding: 0 20px;
+            pointer-events: none; /* important: prevents blocking content */
         }
 
         .carousel-btn {
-            width: 50px;
-            height: 50px;
+            width: 48px;
+            height: 48px;
             border-radius: 50%;
             border: none;
             background: white;
@@ -462,6 +464,7 @@
             align-items: center;
             justify-content: center;
             transition: all 0.3s ease;
+            pointer-events: auto; /* enables clicking */
         }
 
             .carousel-btn:hover {
@@ -469,6 +472,7 @@
                 color: white;
                 transform: scale(1.1);
             }
+
 
         .carousel-indicators {
             position: absolute;
