--- a/index.html
+++ b/index.html
@@ -442,19 +442,17 @@
 
         .carousel-controls {
             position: absolute;
-            top: 50%;
-            left: 0;
-            width: 100%;
+            bottom: 30px;
+            left: 50%;
+            transform: translateX(-50%);
             display: flex;
-            justify-content: space-between;
-            transform: translateY(-50%);
-            padding: 0 20px;
-            pointer-events: none; /* important: prevents blocking content */
+            gap: 15px;
+            z-index: 10;
         }
 
         .carousel-btn {
-            width: 48px;
-            height: 48px;
+            width: 50px;
+            height: 50px;
             border-radius: 50%;
             border: none;
             background: white;
@@ -464,7 +462,6 @@
             align-items: center;
             justify-content: center;
             transition: all 0.3s ease;
-            pointer-events: auto; /* enables clicking */
         }
 
             .carousel-btn:hover {
@@ -472,7 +469,6 @@
                 color: white;
                 transform: scale(1.1);
             }
-
 
         .carousel-indicators {
             position: absolute;
