Displaying ML Lab demo

--- a/index.html
+++ b/index.html
@@ -903,7 +903,7 @@
                         <div class="video-container">
                             <video autoplay muted loop>
                                 <!-- Placeholder - replace with your video when available -->
-                                <source src="assets/MLLab_demo.mp4" type="video/mp4">
+                                <source src="assets/TheMLab_demo.mp4" type="video/mp4">
                             </video>
                         </div>
                         <div class="project-info">
