--- a/index.html
+++ b/index.html
@@ -248,22 +248,23 @@
         .carousel-slide {
             min-width: 100%;
             flex-shrink: 0;
-            padding: 60px;
+            padding: 60px 40px 60px 80px;
             display: flex;
             gap: 60px;
             align-items: center;
-            justify-content: center;
+            justify-content: flex-start;
             box-sizing: border-box;
         }
 
         .video-container {
             flex: none; /* fixed width for video window */
-            height: 200px; /* fixed height for video window */
-            width: 320px;
+            height: 300px; /* fixed height for video window */
+            width: 450px;
             border-radius: 12px;
             position: relative;
             background: black;
             overflow: hidden;
+            margin-left: 0;
         }
 
             .video-container video {
